--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ h1 {
   transition: 200ms ease;
 }
 
+#todo-input:hover {
+  border-color: var(--accent-color);
+  transition: 200ms ease;
+}
+
 form {
   position: relative;
 }
@@ -157,4 +162,23 @@ input[type="checkbox"]:checked ~ .todo-text {
 
 input[type="checkbox"] {
   display: none;
+}
+
+@media (max-width: 500px) {
+  html {
+    font-size: 12pt;
+  }
+
+  #add-button {
+    position: unset;
+    width: 100%;
+    margin-top: 10px;
+    padding: 15px;
+    height: auto;
+  }
+
+  h1 {
+    margin-top: 50px;
+    font-size: 15vw;
+  }
 }
